--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,22 +1,22 @@
-@import '@angular/material/theming';
+@use '@angular/material' as mat;
 
-@include mat-core();
+@include mat.core();
 
-$primary: mat-palette($mat-blue);
-$accent: mat-palette($mat-amber, A200, A100, A400);
-$warn: mat-palette($mat-red);
+$primary: mat.define-palette(mat.$blue-palette);
+$accent: mat.define-palette(mat.$amber-palette, A200, A100, A400);
+$warn: mat.define-palette(mat.$red-palette);
 
-$theme: mat-light-theme((
+$theme: mat.define-light-theme((
   color: (
     primary: $primary,
     accent: $accent,
     warn: $warn,
   ),
-  typography: mat-typography-config(),
+  typography: mat.define-typography-config(),
   density: 0,
 ));
 
-@include angular-material-theme($theme);
+@include mat.all-component-themes($theme);
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
